# Taller-sockets

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  ColaMultiHilo.cpp  ColaMultiHilo.h  CommunicateData.h  GameRunner.cpp  GameRunner.h  QueueMultithread.h  README.md  Server.cpp  Server.h  main.cpp  struct.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
